8176705: Remove static functions in InstanceKlass

Change static functions to instance functions and remove their 'this_k' parameters.

Reviewed-by: dholmes, mgerdin, iklam